# spa-comments

backend/: .env.example  pyproject.toml
backend/comments/: models.py  serializers.py  tests.py  views.py
backend/comments/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
