[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bleach>=6.4.0",
    "celery>=5.6.3",
    "channels>=4.3.2",
    "channels-redis>=4.3.0",
    "django>=6.0.7",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
    "django-redis>=7.0.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "graphene-django>=3.2.3",
    "pillow>=12.3.0",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "redis>=8.0.1",
]
